--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
     Set your sights on our lyrical sky tapestries and prepare to lose yourself in the clouds of amazing music.
   </p>
   <p class="section-text">☁️ TribleTunes: Where every beat touches the sky! ☁️</p>
-  <button class="cta-btn">Listen on YouTube</button>
+  <button class="cta-btn">Be The Part Of Community</button>
 </section>
 
 <!-- RELEASES -->
@@ -274,18 +274,18 @@
     <div class="carousel-track" id="release-track">
       <div class="carousel-item">
         <img src="https://i.scdn.co/image/ab67616d0000b2739f6e2a3d69f79fbbadbaeb0d" alt="Stay">
-        <h3>The Kid LAROI & Justin Bieber – Stay</h3>
-        <a href="https://open.spotify.com/track/5HCyWlXZPP0y6Gqq8TgA20" class="btn" target="_blank">Listen Now</a>
+        <h3>TRIBLETUNES – Back To You</h3>
+        <a href="https://open.spotify.com/track/54y4vQHTHW5RILsuxVgLOM?si=xvEmQiX_TLqGbNPU8UrGrQ" class="btn" target="_blank">Listen Now</a>
       </div>
       <div class="carousel-item">
         <img src="https://i.scdn.co/image/ab67616d0000b273e0a548eeab73d79d14b3e7d3" alt="Blinding Lights">
-        <h3>The Weeknd – Blinding Lights</h3>
-        <a href="https://open.spotify.com/track/0VjIjW4GlUZAMYd2vXMi3b" class="btn" target="_blank">Listen Now</a>
+        <h3>TRIBLETUNES – FUMAÇA E LUZ</h3>
+        <a href="https://open.spotify.com/track/0AmiHSdu7zDClPlmpUrYWn?si=DWViHgvuTFCq0feFLIOimg" class="btn" target="_blank">Listen Now</a>
       </div>
       <div class="carousel-item">
         <img src="https://i.scdn.co/image/ab67616d0000b273d0f17cb0bc8c5ebfd78a1f10" alt="Levitating">
-        <h3>Dua Lipa – Levitating</h3>
-        <a href="https://open.spotify.com/track/463CkQjx2Zk1yXoBuierM9" class="btn" target="_blank">Listen Now</a>
+        <h3>TRIBLETUNES – 808x</h3>
+        <a href="https://open.spotify.com/album/4XFxPNCPMYQrDLs7fh39zP?si=5KFOWyMyQa2X-9NJIcIwtA" class="btn" target="_blank">Listen Now</a>
       </div>
     </div>
     <button class="arrow right" onclick="moveSlide('release', 1)">&#10095;</button>
@@ -299,9 +299,9 @@
     <button class="arrow left" onclick="moveSlide('youtube', -1)">&#10094;</button>
     <div class="carousel-track" id="youtube-track">
       <div class="carousel-item">
-        <img src="https://img.youtube.com/vi/kTJczUoc26U/maxresdefault.jpg" alt="Stay">
-        <h3>The Kid LAROI & Justin Bieber – Stay (Lyric Video)</h3>
-        <a href="https://www.youtube.com/watch?v=kTJczUoc26U" class="btn" target="_blank">Watch Now</a>
+        <img src="https://img.youtube.com/vi/t2aD0Dob6b0/maxresdefault.jpg" alt="Stay">
+        <h3>JUBY PHONIC – Miss Wanna Die (Lyric Video)</h3>
+        <a href="https://youtu.be/t2aD0Dob6b0?si=gs8th9Qjqj7fqnFE" class="btn" target="_blank">Watch Now</a>
       </div>
       <div class="carousel-item">
         <img src="https://img.youtube.com/vi/4NRXx6U8ABQ/maxresdefault.jpg" alt="Blinding Lights">
