--- a/index.html
+++ b/index.html
@@ -304,14 +304,14 @@
         <a href="https://youtu.be/t2aD0Dob6b0?si=gs8th9Qjqj7fqnFE" class="btn" target="_blank">Watch Now</a>
       </div>
       <div class="carousel-item">
-        <img src="https://img.youtube.com/vi/4NRXx6U8ABQ/maxresdefault.jpg" alt="Blinding Lights">
-        <h3>The Weeknd – Blinding Lights (Lyric Video)</h3>
-        <a href="https://www.youtube.com/watch?v=4NRXx6U8ABQ" class="btn" target="_blank">Watch Now</a>
+        <img src="https://img.youtube.com/vi/Wg5zTt0X0j8/maxresdefault.jpg" alt="Blinding Lights">
+        <h3>Dreamsoda – Hey daddy {daddy's home} (Lyric Video)</h3>
+        <a href="https://youtu.be/Wg5zTt0X0j8?si=jg7GURkFlyJxznjy" class="btn" target="_blank">Watch Now</a>
       </div>
       <div class="carousel-item">
-        <img src="https://img.youtube.com/vi/TUVcZfQe-Kw/maxresdefault.jpg" alt="Levitating">
-        <h3>Dua Lipa – Levitating (Lyric Video)</h3>
-        <a href="https://www.youtube.com/watch?v=TUVcZfQe-Kw" class="btn" target="_blank">Watch Now</a>
+        <img src="https://img.youtube.com/vi/mw5_5nh2iHM/maxresdefault.jpg" alt="Levitating">
+        <h3>Ayra Starr - All The Love (Lyric Video)</h3>
+        <a href="https://youtu.be/mw5_5nh2iHM?si=g3nCpS2uVo4_VvMt" class="btn" target="_blank">Watch Now</a>
       </div>
     </div>
     <button class="arrow right" onclick="moveSlide('youtube', 1)">&#10095;</button>
