--- a/index.html
+++ b/index.html
@@ -299,17 +299,17 @@
     <button class="arrow left" onclick="moveSlide('youtube', -1)">&#10094;</button>
     <div class="carousel-track" id="youtube-track">
       <div class="carousel-item">
-        <img src="https://img.youtube.com/vi/t2aD0Dob6b0/hqdefault.jpg" alt="Stay">
+        <img src="https://img.youtube.com/vi/t2aD0Dob6b0/hqdefault.jpg" alt="Miss Wanna Die">
         <h3>JUBY PHONIC – Miss Wanna Die (Lyric Video)</h3>
         <a href="https://youtu.be/t2aD0Dob6b0?si=gs8th9Qjqj7fqnFE" class="btn" target="_blank">Watch Now</a>
       </div>
       <div class="carousel-item">
-        <img src="https://img.youtube.com/vi/Wg5zTt0X0j8/hqdefault.jpg" alt="Blinding Lights">
+        <img src="https://img.youtube.com/vi/Wg5zTt0X0j8/hqdefault.jpg" alt="Hey daddy">
         <h3>Dreamsoda – Hey daddy {daddy's home} (Lyric Video)</h3>
         <a href="https://youtu.be/Wg5zTt0X0j8?si=jg7GURkFlyJxznjy" class="btn" target="_blank">Watch Now</a>
       </div>
       <div class="carousel-item">
-        <img src="https://img.youtube.com/vi/mw5_5nh2iHM/maxresdefault.jpg" alt="Levitating">
+        <img src="https://img.youtube.com/vi/mw5_5nh2iHM/hqdefault.jpg" alt="All The Love">
         <h3>Ayra Starr - All The Love (Lyric Video)</h3>
         <a href="https://youtu.be/mw5_5nh2iHM?si=g3nCpS2uVo4_VvMt" class="btn" target="_blank">Watch Now</a>
       </div>
