--- a/index.html
+++ b/index.html
@@ -273,18 +273,18 @@
     <button class="arrow left" onclick="moveSlide('release', -1)">&#10094;</button>
     <div class="carousel-track" id="release-track">
       <div class="carousel-item">
-        <img src="https://i.scdn.co/image/ab67616d0000b2739f6e2a3d69f79fbbadbaeb0d" alt="Stay">
-        <h3>TRIBLETUNES – Back To You</h3>
+        <img src="https://ik.imagekit.io/lbmgfujrk/UniversalUpscaler_72c34279-7ddf-49c9-b18c-55a49137c2f5.jpg?updatedAt=1759111477554" alt="Back To You">
+        <h3>Back To You</h3>
         <a href="https://open.spotify.com/track/54y4vQHTHW5RILsuxVgLOM?si=xvEmQiX_TLqGbNPU8UrGrQ" class="btn" target="_blank">Listen Now</a>
       </div>
       <div class="carousel-item">
-        <img src="https://i.scdn.co/image/ab67616d0000b273e0a548eeab73d79d14b3e7d3" alt="Blinding Lights">
-        <h3>TRIBLETUNES – FUMAÇA E LUZ</h3>
+        <img src="https://i.scdn.co/image/ab67616d0000b273e0a548eeab73d79d14b3e7d3" alt="FUMAÇA E LUZ">
+        <h3>FUMAÇA E LUZ</h3>
         <a href="https://open.spotify.com/track/0AmiHSdu7zDClPlmpUrYWn?si=DWViHgvuTFCq0feFLIOimg" class="btn" target="_blank">Listen Now</a>
       </div>
       <div class="carousel-item">
-        <img src="https://i.scdn.co/image/ab67616d0000b273d0f17cb0bc8c5ebfd78a1f10" alt="Levitating">
-        <h3>TRIBLETUNES – 808x</h3>
+        <img src="https://i.scdn.co/image/ab67616d0000b273d0f17cb0bc8c5ebfd78a1f10" alt="808x">
+        <h3>808x</h3>
         <a href="https://open.spotify.com/album/4XFxPNCPMYQrDLs7fh39zP?si=5KFOWyMyQa2X-9NJIcIwtA" class="btn" target="_blank">Listen Now</a>
       </div>
     </div>
