--- a/index.html
+++ b/index.html
@@ -278,12 +278,12 @@
         <a href="https://open.spotify.com/track/54y4vQHTHW5RILsuxVgLOM?si=xvEmQiX_TLqGbNPU8UrGrQ" class="btn" target="_blank">Listen Now</a>
       </div>
       <div class="carousel-item">
-        <img src="https://i.scdn.co/image/ab67616d0000b273e0a548eeab73d79d14b3e7d3" alt="FUMAÇA E LUZ">
+        <img src="https://ik.imagekit.io/lbmgfujrk/20250919_121021.png?updatedAt=1759111510391" alt="FUMAÇA E LUZ">
         <h3>FUMAÇA E LUZ</h3>
         <a href="https://open.spotify.com/track/0AmiHSdu7zDClPlmpUrYWn?si=DWViHgvuTFCq0feFLIOimg" class="btn" target="_blank">Listen Now</a>
       </div>
       <div class="carousel-item">
-        <img src="https://i.scdn.co/image/ab67616d0000b273d0f17cb0bc8c5ebfd78a1f10" alt="808x">
+        <img src="https://ik.imagekit.io/lbmgfujrk/20250827_094940.jpg" alt="808x">
         <h3>808x</h3>
         <a href="https://open.spotify.com/album/4XFxPNCPMYQrDLs7fh39zP?si=5KFOWyMyQa2X-9NJIcIwtA" class="btn" target="_blank">Listen Now</a>
       </div>
