--- a/index.html
+++ b/index.html
@@ -157,7 +157,9 @@ section{padding:60px 20px;max-width:1000px;margin:auto;}
   <h2 class="section-title">Lose yourself in</h2>
   <h3 class="section-subtitle">the clouds of amazing music.</h3>
   <p class="section-text">There's a world above, where music and clouds converge, called TribleTunes...</p>
-  <button class="cta-btn">Be The Part Of Community</button>
+  <button class="cta-btn" onclick="window.open('https://www.youtube.com/@YourChannelName', '_blank')">
+  Be The Part Of Community
+  </button>
 </section>
 
 <section id="releases">
@@ -259,6 +261,19 @@ function toggleFAQ(btn){
     answer.style.maxHeight=answer.scrollHeight+"px";
   }
 }
+  <!-- Footer -->
+<footer style="
+  padding: 20px 10px;
+  text-align: center;
+  background: #000;
+  color: #fff;
+  font-family: 'Poppins', sans-serif;
+  font-size: 0.9rem;
+">
+  &copy; TribleTunes 2025. All rights reserved.
+</footer>
 </script>
+
+  
 </body>
 </html>
