--- a/index.html
+++ b/index.html
@@ -221,10 +221,38 @@ section{padding:60px 20px;max-width:1000px;margin:auto;}
 <section id="newsletter">
   <h2 class="section-title">Stay updated</h2>
   <h3 class="section-subtitle">with our newsletter.</h3>
-  <p class="section-text">Don’t miss out on new releases, special features, and behind-the-scenes updates.</p>
-  <button class="cta-btn">Subscribe</button>
-</section>
+  <p class="section-text">Don’t miss out on new releases, special features, and behind-the-scenes updates. Subscribe below!</p>
 
+  <form action="https://formspree.io/f/yourformid" method="POST" style="
+      display:flex;
+      flex-direction:row;
+      justify-content:center;
+      flex-wrap:wrap;
+      gap:10px;
+      margin-top:15px;
+  ">
+    <input type="email" name="email" placeholder="Enter your email" required style="
+        padding:10px 15px;
+        border-radius:5px;
+        border:2px solid #fff;
+        background:transparent;
+        color:#fff;
+        font-size:1rem;
+        outline:none;
+        min-width:250px;
+    ">
+    <button type="submit" class="cta-btn" style="
+        padding:10px 20px;
+        border-radius:5px;
+        border:2px solid #fff;
+        background:transparent;
+        color:#fff;
+        font-weight:600;
+        cursor:pointer;
+        transition:0.3s;
+    ">Subscribe</button>
+  </form>
+</section>
 <script>
 function scrollToSection(id){
   document.getElementById(id).scrollIntoView({behavior:'smooth'});
