--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@ section{padding:60px 20px;max-width:1000px;margin:auto;}
   <h3 class="section-subtitle">with our newsletter.</h3>
   <p class="section-text">Don’t miss out on new releases, special features, and behind-the-scenes updates. Subscribe below!</p>
 
-  <form action="https://formspree.io/f/yourformid" method="POST" style="
+  <form action="https://formspree.io/f/xzzjejde" method="POST" style="
       display:flex;
       flex-direction:row;
       justify-content:center;
