--- a/index.html
+++ b/index.html
@@ -269,32 +269,35 @@ section{padding:60px 20px;max-width:1000px;margin:auto;}
   </form>
 </section>
 <script>
+<script>
+// Smooth scroll
 function scrollToSection(id){
   document.getElementById(id).scrollIntoView({behavior:'smooth'});
 }
 
+// Carousel
 function setupCarousel(trackId){
-  const track=document.getElementById(trackId);
-  const items=track.children;
-  let index=0;
-  const prevBtn=track.parentElement.querySelector('.arrow.left');
-  const nextBtn=track.parentElement.querySelector('.arrow.right');
+  const track = document.getElementById(trackId);
+  const items = track.children;
+  let index = 0;
+  const prevBtn = track.parentElement.querySelector('.arrow.left');
+  const nextBtn = track.parentElement.querySelector('.arrow.right');
 
   function showSlide(i){
-    if(i<0) index=items.length-1;
-    else if(i>=items.length) index=0;
-    else index=i;
-    track.style.transform=`translateX(-${index*100}%)`;
+    if(i < 0) index = items.length - 1;
+    else if(i >= items.length) index = 0;
+    else index = i;
+    track.style.transform = `translateX(-${index*100}%)`;
   }
 
-  prevBtn.addEventListener('click',()=>showSlide(index-1));
-  nextBtn.addEventListener('click',()=>showSlide(index+1));
+  prevBtn.addEventListener('click', ()=>showSlide(index-1));
+  nextBtn.addEventListener('click', ()=>showSlide(index+1));
 }
 
+// Initialize carousels
 setupCarousel('release-track');
 setupCarousel('youtube-track');
 
-<script>
 // FAQ toggle
 function toggleFAQ(btn){
   btn.classList.toggle('active');
@@ -306,18 +309,9 @@ function toggleFAQ(btn){
   }
 }
 </script>
-
 <!-- Footer -->
-<footer style="
-  padding: 20px 10px;
-  text-align: center;
-  background: #000;
-  color: #fff;
-  font-family: 'Poppins', sans-serif;
-  font-size: 0.9rem;
-">
+<footer style="padding:20px 10px;text-align:center;background:#000;color:#fff;font-family:'Poppins',sans-serif;font-size:0.9rem;">
   &copy; TribleTunes 2025. All rights reserved.
 </footer>
-
 </body>
 </html>
