--- a/index.html
+++ b/index.html
@@ -223,52 +223,13 @@ section{padding:60px 20px;max-width:1000px;margin:auto;}
   <h3 class="section-subtitle">with our newsletter & suggestions.</h3>
   <p class="section-text">Don’t miss out on new releases, special features, and behind-the-scenes updates. You can also send us your message below!</p>
 
-  <form action="https://formspree.io/f/xzzjejde" method="POST" style="
-      display:flex;
-      flex-direction:column;
-      gap:10px;
-      max-width:500px;
-      margin:auto;
-  ">
-    <!-- Email input -->
-    <input type="email" name="email" placeholder="Enter your email" required style="
-        padding:10px 15px;
-        border-radius:5px;
-        border:2px solid #fff;
-        background:transparent;
-        color:#fff;
-        font-size:1rem;
-        outline:none;
-    ">
-
-    <!-- Message textarea -->
-    <textarea name="message" placeholder="Write your message here..." required style="
-        padding:10px 15px;
-        border-radius:5px;
-        border:2px solid #fff;
-        background:transparent;
-        color:#fff;
-        font-size:1rem;
-        outline:none;
-        min-height:100px;
-        resize:vertical;
-    "></textarea>
-
-    <!-- Submit button -->
-    <button type="submit" class="cta-btn" style="
-        padding:10px 20px;
-        border-radius:5px;
-        border:2px solid #fff;
-        background:transparent;
-        color:#fff;
-        font-weight:600;
-        cursor:pointer;
-        transition:0.3s;
-        align-self:center;
-    ">Submit</button>
+  <form action="https://formspree.io/f/xzzjejde" method="POST" style="display:flex;flex-direction:column;gap:10px;max-width:500px;margin:auto;">
+    <input type="email" name="email" placeholder="Enter your email" required style="padding:10px 15px;border-radius:5px;border:2px solid #fff;background:transparent;color:#fff;font-size:1rem;outline:none;">
+    <textarea name="message" placeholder="Write your message here..." required style="padding:10px 15px;border-radius:5px;border:2px solid #fff;background:transparent;color:#fff;font-size:1rem;outline:none;min-height:100px;resize:vertical;"></textarea>
+    <button type="submit" class="cta-btn" style="padding:10px 20px;border-radius:5px;border:2px solid #fff;background:transparent;color:#fff;font-weight:600;cursor:pointer;transition:0.3s;align-self:center;">Submit</button>
   </form>
 </section>
-<script>
+
 <script>
 // Smooth scroll
 function scrollToSection(id){
@@ -309,9 +270,11 @@ function toggleFAQ(btn){
   }
 }
 </script>
+
 <!-- Footer -->
 <footer style="padding:20px 10px;text-align:center;background:#000;color:#fff;font-family:'Poppins',sans-serif;font-size:0.9rem;">
   &copy; TribleTunes 2025. All rights reserved.
 </footer>
+
 </body>
 </html>
