--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ section{padding:60px 20px;max-width:1000px;margin:auto;}
   <h2 class="section-title">Lose yourself in</h2>
   <h3 class="section-subtitle">the clouds of amazing music.</h3>
   <p class="section-text">There's a world above, where music and clouds converge, called TribleTunes...</p>
-  <button class="cta-btn" onclick="window.open('https://www.youtube.com/@YourChannelName', '_blank')">
+  <button class="cta-btn" onclick="window.open('https://www.youtube.com/@Tribletunes', '_blank')">
   Be The Part Of Community
   </button>
 </section>
