--- a/index.html
+++ b/index.html
@@ -162,38 +162,62 @@ section{padding:60px 20px;max-width:1000px;margin:auto;}
   </button>
 </section>
 
-<section id="releases">
-  <h2 class="section-title">Featured Releases</h2>
-  <div class="carousel">
-    <button class="arrow left" onclick="moveSlide('release',-1)">&#10094;</button>
-    <div class="carousel-track" id="release-track">
-      <div class="carousel-item"><img src="https://ik.imagekit.io/lbmgfujrk/UniversalUpscaler_72c34279-7ddf-49c9-b18c-55a49137c2f5.jpg"><h3>Back To You</h3><a href="#" class="btn">Listen Now</a></div>
-      <div class="carousel-item"><img src="https://ik.imagekit.io/lbmgfujrk/20250919_121021.png"><h3>FUMAÇA E LUZ</h3><a href="#" class="btn">Listen Now</a></div>
-      <div class="carousel-item"><img src="https://ik.imagekit.io/lbmgfujrk/20250827_094940.jpg"><h3>808x</h3><a href="#" class="btn">Listen Now</a></div>
-    </div>
-    <button class="arrow right" onclick="moveSlide('release',1)">&#10095;</button>
-  </div>
-</section>
-
-<section id="youtube">
-  <h2 class="section-title">YouTube Uploads</h2>
-  <div class="carousel">
-    <button class="arrow left" onclick="moveSlide('youtube',-1)">&#10094;</button>
-    <div class="carousel-track" id="youtube-track">
-      <div class="carousel-item"><img src="https://img.youtube.com/vi/t2aD0Dob6b0/hqdefault.jpg"><h3>Miss Wanna Die</h3><a href="#" class="btn">Watch Now</a></div>
-      <div class="carousel-item"><img src="https://img.youtube.com/vi/Wg5zTt0X0j8/hqdefault.jpg"><h3>Hey daddy</h3><a href="#" class="btn">Watch Now</a></div>
-      <div class="carousel-item"><img src="https://img.youtube.com/vi/mw5_5nh2iHM/hqdefault.jpg"><h3>All The Love</h3><a href="#" class="btn">Watch Now</a></div>
-    </div>
-    <button class="arrow right" onclick="moveSlide('youtube',1)">&#10095;</button>
-  </div>
-</section>
 
 <section id="faq">
   <h2 class="section-title">Have questions?</h2>
   <h3 class="section-subtitle">We've got answers.</h3>
 
   <div class="faq-item">
-    <button class="faq-question" onclick="toggleFAQ(this)">What is TribleTunes? <span class="arrow-icon">▼</span></button>
+    <button class="faq-question" onclick="toggleFAQ(this)">What is TribleTunes? <span class="arrow-icon">▼</span></<section id="releases">
+  <h2 class="section-title">Featured Releases</h2>
+  <div class="carousel">
+    <button class="arrow left" onclick="moveSlide('release', -1)">&#10094;</button>
+    <div class="carousel-track" id="release-track">
+      <div class="carousel-item">
+        <img src="https://ik.imagekit.io/lbmgfujrk/UniversalUpscaler_72c34279-7ddf-49c9-b18c-55a49137c2f5.jpg?updatedAt=1759111477554" alt="Back To You">
+        <h3>Back To You</h3>
+        <a href="https://open.spotify.com/track/54y4vQHTHW5RILsuxVgLOM?si=xvEmQiX_TLqGbNPU8UrGrQ" class="btn" target="_blank">Listen Now</a>
+      </div>
+      <div class="carousel-item">
+        <img src="https://ik.imagekit.io/lbmgfujrk/20250919_121021.png?updatedAt=1759111510391" alt="FUMAÇA E LUZ">
+        <h3>FUMAÇA E LUZ</h3>
+        <a href="https://open.spotify.com/track/0AmiHSdu7zDClPlmpUrYWn?si=DWViHgvuTFCq0feFLIOimg" class="btn" target="_blank">Listen Now</a>
+      </div>
+      <div class="carousel-item">
+        <img src="https://ik.imagekit.io/lbmgfujrk/20250827_094940.jpg" alt="808x">
+        <h3>808x</h3>
+        <a href="https://open.spotify.com/album/4XFxPNCPMYQrDLs7fh39zP?si=5KFOWyMyQa2X-9NJIcIwtA" class="btn" target="_blank">Listen Now</a>
+      </div>
+    </div>
+    <button class="arrow right" onclick="moveSlide('release', 1)">&#10095;</button>
+  </div>
+</section>
+
+<!-- YOUTUBE -->
+<section id="youtube">
+  <h2 class="section-title">YouTube Uploads</h2>
+  <div class="carousel">
+    <button class="arrow left" onclick="moveSlide('youtube', -1)">&#10094;</button>
+    <div class="carousel-track" id="youtube-track">
+      <div class="carousel-item">
+        <img src="https://img.youtube.com/vi/t2aD0Dob6b0/hqdefault.jpg" alt="Miss Wanna Die">
+        <h3>JUBY PHONIC – Miss Wanna Die (Lyric Video)</h3>
+        <a href="https://youtu.be/t2aD0Dob6b0?si=gs8th9Qjqj7fqnFE" class="btn" target="_blank">Watch Now</a>
+      </div>
+      <div class="carousel-item">
+        <img src="https://img.youtube.com/vi/Wg5zTt0X0j8/hqdefault.jpg" alt="Hey daddy">
+        <h3>Dreamsoda – Hey daddy {daddy's home} (Lyric Video)</h3>
+        <a href="https://youtu.be/Wg5zTt0X0j8?si=jg7GURkFlyJxznjy" class="btn" target="_blank">Watch Now</a>
+      </div>
+      <div class="carousel-item">
+        <img src="https://img.youtube.com/vi/mw5_5nh2iHM/hqdefault.jpg" alt="All The Love">
+        <h3>Ayra Starr - All The Love (Lyric Video)</h3>
+        <a href="https://youtu.be/mw5_5nh2iHM?si=g3nCpS2uVo4_VvMt" class="btn" target="_blank">Watch Now</a>
+      </div>
+    </div>
+    <button class="arrow right" onclick="moveSlide('youtube', 1)">&#10095;</button>
+  </div>
+</section>button>
     <div class="faq-answer">TribleTunes is a YouTube channel dedicated to lyric videos.</div>
   </div>
 
