--- a/index.html
+++ b/index.html
@@ -155,9 +155,11 @@ section{padding:60px 20px;max-width:1000px;margin:auto;}
 
 <section id="about">
   <h2 class="section-title">Lose yourself in</h2>
-  <h3 class="section-subtitle">the clouds of amazing music.</h3>
-  <p class="section-text">There's a world above, where music and clouds converge, called TribleTunes...</p>
-  <button class="cta-btn" onclick="window.open('https://www.youtube.com/@YourChannelName', '_blank')">
+  <h3 class="section-subtitle">the Place of amazing music.</h3>
+  <p class="section-text">TribleTunes is a space where music and imagination soar together. We create and share high-quality lyric videos, bringing your favorite songs to life with vibrant visuals. From daily releases to curated playlists, our goal is to lift every listener into a world of amazing melodies and unforgettable rhythms.
+
+🎵 TribleTunes: Lose yourself in the music! 🎵</p>
+  <button class="cta-btn" onclick="window.open('https://www.youtube.com/@Tribletunes', '_blank')">
   Be The Part Of Community
   </button>
 </section>
