--- a/index.html
+++ b/index.html
@@ -1,147 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>TribleTunes</title>
-<link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-<script src='https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js' type="module"></script>
-<script src='https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js' nomodule></script>
-<style>
-*{margin:0;padding:0;box-sizing:border-box;}
-html{scroll-behavior:smooth;}
-body{font-family:'Poppins',sans-serif;color:#fff;background:#0d0d0d;overflow-x:hidden;line-height:1.6;text-align:center;}
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>TribleTunes</title>
 
-header{
-  padding:15px 20px;
-  display:flex;
-  flex-direction:column;
-  align-items:center;
-  background:#000;
-}
-.header-logo{margin-bottom:10px;}
-.logo{font-family:'Dancing Script',cursive;font-size:2.2rem;color:#fff;text-align:center;}
-.header-nav{
-  display:flex;
-  gap:10px;
-  overflow-x:auto;
-  -webkit-overflow-scrolling:touch;
-  flex-wrap:nowrap;
-  justify-content:center;
-}
-.nav-btn{
-  padding:6px 10px;
-  border:2px solid #fff;
-  border-radius:5px;
-  background:none;
-  color:#fff;
-  font-weight:600;
-  cursor:pointer;
-  white-space:nowrap;
-  flex:0 0 auto;
-  transition:0.3s;
-}
-.nav-btn:hover{background:#fff;color:#000;}
-.header-nav::-webkit-scrollbar{display:none;}
-.header-nav{-ms-overflow-style:none;scrollbar-width:none;}
+  <!-- Favicon -->
+  <link rel="icon" href="https://ik.imagekit.io/lbmgfujrk/favicon.png" type="image/png">
 
-section{padding:60px 20px;max-width:1000px;margin:auto;}
-.section-title{font-family:'Dancing Script',cursive;font-size:2rem;margin-bottom:10px;}
-.section-subtitle{font-size:1.5rem;font-weight:600;margin-bottom:20px;}
-.section-text{font-size:1rem;margin-bottom:20px;}
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 
-.cta-btn,.btn{
-  display:inline-block;
-  padding:10px 18px;
-  border:2px solid #fff;
-  border-radius:5px;
-  background:none;
-  color:#fff;
-  font-weight:600;
-  text-transform:uppercase;
-  cursor:pointer;
-  transition:0.3s;
-  text-decoration:none;
-}
-.cta-btn:hover,.btn:hover{background:#fff;color:#000;}
+  <!-- Ionicons -->
+  <script src='https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js' type="module"></script>
+  <script src='https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js' nomodule></script>
 
-.carousel{
-  position:relative;
-  overflow:hidden;
-  width:100%;
-  margin:auto;
-}
-.carousel-track{
-  display:flex;
-  transition:transform 0.5s ease-in-out;
-}
-.carousel-item{
-  flex:0 0 100%;
-  box-sizing:border-box;
-  padding:10px;
-}
-.carousel-item img{
-  width:100%;
-  border-radius:10px;
-  box-shadow:0 4px 10px rgba(0,0,0,0.5);
-}
-.arrow{
-  position:absolute;
-  top:50%;
-  transform:translateY(-50%);
-  background:rgba(0,0,0,0.5);
-  border:none;
-  color:white;
-  font-size:24px;
-  cursor:pointer;
-  padding:10px;
-  border-radius:50%;
-  z-index:10;
-}
-.arrow.left{left:10px;}
-.arrow.right{right:10px;}
+  <style>
+    /* RESET & BASE */
+    *{margin:0;padding:0;box-sizing:border-box;}
+    html{scroll-behavior:smooth;}
+    body{font-family:'Poppins',sans-serif;color:#fff;background:#0d0d0d;overflow-x:hidden;line-height:1.6;text-align:center;}
 
-/* FAQ */
-.faq-item{margin-bottom:15px;text-align:left;}
-.faq-question{
-  width:100%;
-  padding:12px 15px;
-  background:#111;
-  border:none;
-  color:#fff;
-  font-size:1rem;
-  font-weight:600;
-  text-align:left;
-  cursor:pointer;
-  display:flex;
-  justify-content:space-between;
-  align-items:center;
-  border-radius:5px;
-  transition:0.3s;
-}
-.faq-question:hover{background:#222;}
-.faq-answer{
-  max-height:0;
-  overflow:hidden;
-  padding:0 15px;
-  background:#111;
-  border-radius:0 0 5px 5px;
-  transition:max-height 0.3s ease;
-  color:#ccc;
-}
-.faq-question.active .arrow-icon{transform:rotate(180deg);}
+    /* HEADER */
+    header{padding:15px 20px;display:flex;flex-direction:column;align-items:center;background:#000;}
+    .header-logo{margin-bottom:10px;}
+    .logo{font-family:'Dancing Script',cursive;font-size:2.2rem;color:#fff;text-align:center;}
+    .header-nav{display:flex;gap:10px;overflow-x:auto;-webkit-overflow-scrolling:touch;flex-wrap:nowrap;justify-content:center;}
+    .nav-btn{padding:6px 10px;border:2px solid #fff;border-radius:5px;background:none;color:#fff;font-weight:600;cursor:pointer;white-space:nowrap;flex:0 0 auto;transition:0.3s;}
+    .nav-btn:hover{background:#fff;color:#000;}
+    .header-nav::-webkit-scrollbar{display:none;}
+    .header-nav{-ms-overflow-style:none;scrollbar-width:none;}
 
-/* RESPONSIVE */
-@media(max-width:600px){
-  .section-title{font-size:1.5rem;}
-  .section-subtitle{font-size:1.2rem;}
-  .nav-btn{font-size:0.8rem;padding:5px 8px;}
-  .logo{font-size:2rem;}
-}
-</style>
+    /* SECTIONS */
+    section{padding:60px 20px;max-width:1000px;margin:auto;}
+    .section-title{font-family:'Dancing Script',cursive;font-size:2rem;margin-bottom:10px;}
+    .section-subtitle{font-size:1.5rem;font-weight:600;margin-bottom:20px;}
+    .section-text{font-size:1rem;margin-bottom:20px;}
+
+    /* BUTTONS */
+    .cta-btn,.btn{display:inline-block;padding:10px 18px;border:2px solid #fff;border-radius:5px;background:none;color:#fff;font-weight:600;text-transform:uppercase;cursor:pointer;transition:0.3s;text-decoration:none;}
+    .cta-btn:hover,.btn:hover{background:#fff;color:#000;}
+
+    /* CAROUSEL */
+    .carousel{position:relative;overflow:hidden;width:100%;margin:auto;}
+    .carousel-track{display:flex;transition:transform 0.5s ease-in-out;}
+    .carousel-item{flex:0 0 100%;box-sizing:border-box;padding:10px;}
+    .carousel-item img{width:100%;border-radius:10px;box-shadow:0 4px 10px rgba(0,0,0,0.5);}
+    .arrow{position:absolute;top:50%;transform:translateY(-50%);background:rgba(0,0,0,0.5);border:none;color:white;font-size:24px;cursor:pointer;padding:10px;border-radius:50%;z-index:10;}
+    .arrow.left{left:10px;}
+    .arrow.right{right:10px;}
+
+    /* FAQ */
+    .faq-item{margin-bottom:15px;text-align:left;}
+    .faq-question{width:100%;padding:12px 15px;background:#111;border:none;color:#fff;font-size:1rem;font-weight:600;text-align:left;cursor:pointer;display:flex;justify-content:space-between;align-items:center;border-radius:5px;transition:0.3s;}
+    .faq-question:hover{background:#222;}
+    .faq-answer{max-height:0;overflow:hidden;padding:0 15px;background:#111;border-radius:0 0 5px 5px;transition:max-height 0.3s ease;color:#ccc;}
+    .faq-question.active .arrow-icon{transform:rotate(180deg);}
+
+    /* NEWSLETTER FORM */
+    form{max-width:500px;margin:20px auto;text-align:left;}
+    form input, form textarea{padding:10px 15px;border-radius:5px;border:2px solid #fff;background:transparent;color:#fff;font-size:1rem;outline:none;width:100%;margin-bottom:12px;}
+    form textarea{min-height:100px;resize:vertical;}
+    form button{width:100%;}
+
+    /* FOOTER */
+    footer{background:#000;padding:20px;text-align:center;font-size:0.9rem;color:#ccc;}
+    footer a{color:#fff;text-decoration:none;margin:0 8px;}
+    footer a:hover{text-decoration:underline;}
+
+    /* RESPONSIVE */
+    @media(max-width:600px){
+      .section-title{font-size:1.5rem;}
+      .section-subtitle{font-size:1.2rem;}
+      .nav-btn{font-size:0.8rem;padding:5px 8px;}
+      .logo{font-size:2rem;}
+    }
+  </style>
 </head>
 <body>
 
+<!-- HEADER -->
 <header>
   <div class="header-logo"><h1 class="logo">TribleTunes</h1></div>
   <nav class="header-nav">
@@ -153,17 +91,18 @@ section{padding:60px 20px;max-width:1000px;margin:auto;}
   </nav>
 </header>
 
+<!-- ABOUT -->
 <section id="about">
   <h2 class="section-title">Lose yourself in</h2>
   <h3 class="section-subtitle">the Place of amazing music.</h3>
-  <p class="section-text">TribleTunes is a space where music and imagination soar together. We create and share high-quality lyric videos, bringing your favorite songs to life with vibrant visuals. From daily releases to curated playlists, our goal is to lift every listener into a world of amazing melodies and unforgettable rhythms.
-
-🎵 TribleTunes: Lose yourself in the music! 🎵</p>
-  <button class="cta-btn" onclick="window.open('https://www.youtube.com/@Tribletunes', '_blank')">
-  Be The Part Of Community
-  </button>
+  <p class="section-text">
+    TribleTunes is a space where music and imagination soar together. We create and share high-quality lyric videos, bringing your favorite songs to life with vibrant visuals. From daily releases to curated playlists, our goal is to lift every listener into a world of amazing melodies and unforgettable rhythms.
+    <br>🎵 TribleTunes: Lose yourself in the music! 🎵
+  </p>
+  <button class="cta-btn" onclick="window.open('https://www.youtube.com/@Tribletunes', '_blank')">Be The Part Of Community</button>
 </section>
 
+<!-- RELEASES -->
 <section id="releases">
   <h2 class="section-title">Featured Releases</h2>
   <div class="carousel">
@@ -214,94 +153,76 @@ section{padding:60px 20px;max-width:1000px;margin:auto;}
     <button class="arrow right" onclick="moveSlide('youtube', 1)">&#10095;</button>
   </div>
 </section>
-  
+
+<!-- FAQ -->
 <section id="faq">
   <h2 class="section-title">Have questions?</h2>
   <h3 class="section-subtitle">We've got answers.</h3>
-
   <div class="faq-item">
     <button class="faq-question" onclick="toggleFAQ(this)">What is TribleTunes? <span class="arrow-icon">▼</span></button>
     <div class="faq-answer">TribleTunes is a YouTube channel dedicated to lyric videos.</div>
   </div>
-
   <div class="faq-item">
     <button class="faq-question" onclick="toggleFAQ(this)">How often are new videos released? <span class="arrow-icon">▼</span></button>
     <div class="faq-answer">We release new lyric videos daily.</div>
   </div>
-
   <div class="faq-item">
     <button class="faq-question" onclick="toggleFAQ(this)">Can I request a song? <span class="arrow-icon">▼</span></button>
     <div class="faq-answer">Yes! Fans can suggest songs.</div>
   </div>
-
   <div class="faq-item">
     <button class="faq-question" onclick="toggleFAQ(this)">Are all videos official? <span class="arrow-icon">▼</span></button>
     <div class="faq-answer">All lyric videos are created officially with permissions from the artists.</div>
   </div>
-
   <div class="faq-item">
     <button class="faq-question" onclick="toggleFAQ(this)">How can I support TribleTunes? <span class="arrow-icon">▼</span></button>
     <div class="faq-answer">Support us by subscribing, sharing videos, and engaging with our content.</div>
   </div>
 </section>
 
+<!-- NEWSLETTER -->
 <section id="newsletter">
   <h2 class="section-title">Stay updated</h2>
   <h3 class="section-subtitle">with our newsletter & suggestions.</h3>
   <p class="section-text">Don’t miss out on new releases, special features, and behind-the-scenes updates. You can also send us your message below!</p>
 
-  <form action="https://formspree.io/f/xzzjejde" method="POST" style="display:flex;flex-direction:column;gap:10px;max-width:500px;margin:auto;">
-    <input type="email" name="email" placeholder="Enter your email" required style="padding:10px 15px;border-radius:5px;border:2px solid #fff;background:transparent;color:#fff;font-size:1rem;outline:none;">
-    <textarea name="message" placeholder="Write your message here..." required style="padding:10px 15px;border-radius:5px;border:2px solid #fff;background:transparent;color:#fff;font-size:1rem;outline:none;min-height:100px;resize:vertical;"></textarea>
-    <button type="submit" class="cta-btn" style="padding:10px 20px;border-radius:5px;border:2px solid #fff;background:transparent;color:#fff;font-weight:600;cursor:pointer;transition:0.3s;align-self:center;">Submit</button>
+  <form action="https://formspree.io/f/xzzjejde" method="POST">
+    <input type="email" name="email" placeholder="Your Email" required>
+    <textarea name="message" placeholder="Your Message (optional)"></textarea>
+    <button type="submit" class="cta-btn">Subscribe & Send</button>
   </form>
 </section>
 
-<script>
-// Smooth scroll
-function scrollToSection(id){
-  document.getElementById(id).scrollIntoView({behavior:'smooth'});
-}
-
-// Carousel
-function setupCarousel(trackId){
-  const track = document.getElementById(trackId);
-  const items = track.children;
-  let index = 0;
-  const prevBtn = track.parentElement.querySelector('.arrow.left');
-  const nextBtn = track.parentElement.querySelector('.arrow.right');
-
-  function showSlide(i){
-    if(i < 0) index = items.length - 1;
-    else if(i >= items.length) index = 0;
-    else index = i;
-    track.style.transform = `translateX(-${index*100}%)`;
-  }
-
-  prevBtn.addEventListener('click', ()=>showSlide(index-1));
-  nextBtn.addEventListener('click', ()=>showSlide(index+1));
-}
-
-// Initialize carousels
-setupCarousel('release-track');
-setupCarousel('youtube-track');
-
-// FAQ toggle
-function toggleFAQ(btn){
-  btn.classList.toggle('active');
-  const answer = btn.nextElementSibling;
-  if(answer.style.maxHeight){
-    answer.style.maxHeight = null;
-  } else {
-    answer.style.maxHeight = answer.scrollHeight + "px";
-  }
-}
-</script>
-
-<!-- Footer -->
-<footer style="padding:20px 10px;text-align:center;background:#000;color:#fff;font-family:'Poppins',sans-serif;font-size:0.9rem;">
-  &copy; TribleTunes 2025. All rights reserved.
+<!-- FOOTER -->
+<footer>
+  <p>&copy; 2025 TribleTunes. All rights reserved.</p>
+  <p>
+    <a href="https://www.youtube.com/@Tribletunes" target="_blank">YouTube</a> |
+    <a href="https://open.spotify.com/artist/3cOkDeURtWJr0Nd9FZo7Pc" target="_blank">Spotify</a> |
+    <a href="mailto:tribletunesmusic@gmail.com">Contact</a>
+  </p>
 </footer>
 
+<!-- SCRIPTS -->
+<script>
+  // Smooth scroll
+  function scrollToSection(id){document.getElementById(id).scrollIntoView({behavior:'smooth'});}
+
+  // Carousel
+  let releaseIndex=0,youtubeIndex=0;
+  function moveSlide(type,dir){
+    const track=document.getElementById(type+'-track');
+    const items=track.children.length;
+    if(type==='release'){releaseIndex=(releaseIndex+dir+items)%items;track.style.transform=`translateX(-${releaseIndex*100}%)`;}
+    if(type==='youtube'){youtubeIndex=(youtubeIndex+dir+items)%items;track.style.transform=`translateX(-${youtubeIndex*100}%)`;}
+  }
+
+  // FAQ toggle
+  function toggleFAQ(btn){
+    btn.classList.toggle('active');
+    let ans=btn.nextElementSibling;
+    if(ans.style.maxHeight){ans.style.maxHeight=null;}else{ans.style.maxHeight=ans.scrollHeight+"px";}
+  }
+</script>
 </body>
 </html>
