--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
   <!-- Favicon -->
   <link rel="icon" href="https://ik.imagekit.io/lbmgfujrk/favicon.png" type="image/png">
 
+  <!-- Social Preview / Open Graph -->
+  <meta property="og:image" content="https://ik.imagekit.io/lbmgfujrk/preview.png">
+  <meta property="og:title" content="TribleTunes">
+  <meta property="og:description" content="Artist, Lyrics Videos, and amazing music content.">
+  <meta property="og:type" content="website">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:image" content="https://ik.imagekit.io/lbmgfujrk/preview.png">
+
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 
