--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
   <p>
     <a href="https://www.youtube.com/@Tribletunes" target="_blank">YouTube</a> |
     <a href="https://open.spotify.com/artist/3cOkDeURtWJr0Nd9FZo7Pc" target="_blank">Spotify</a> |
-    <a href="mailto:tribletunesmusic@gmail.com">Contact</a>
+    <a href="mailto:contact@tribletunes.com">Contact</a>
   </p>
 </footer>
 
