--- a/index.html
+++ b/index.html
@@ -206,8 +206,8 @@
   <p>&copy; 2025 TribleTunes. All rights reserved.</p>
   <p>
     <a href="https://www.youtube.com/@Tribletunes" target="_blank">YouTube</a> |
-    <a href="https://open.spotify.com/artist/3cOkDeURtWJr0Nd9FZo7Pc" target="_blank">Spotify</a> |
-    <a href="mailto:contact@tribletunes.com">Contact</a>
+    <a href="https://open.spotify.com/artist/2cR2Yz2b6cdPNHbjTnNsVy?si=-n6YThoqTQKGvBadgYck5w" target="_blank">Spotify</a> |
+    <a href="https://mail.google.com/mail/?view=cm&fs=1&to=contact@tribletunes.com" target="_blank">Contact</a>
   </p>
 </footer>
 
