--- a/index.html
+++ b/index.html
@@ -89,13 +89,19 @@
 
 <!-- HEADER -->
 <header>
-  <div class="header-logo"><h1 class="logo">TribleTunes</h1></div>
+  <div class="header-logo">
+    <h1 class="logo">TribleTunes</h1>
+  </div>
+
   <nav class="header-nav">
-    <button class="nav-btn" onclick="scrollToSection('about')">About</button>
-    <button class="nav-btn" onclick="scrollToSection('releases')">Releases</button>
-    <button class="nav-btn" onclick="scrollToSection('youtube')">YouTube</button>
-    <button class="nav-btn" onclick="scrollToSection('faq')">FAQ</button>
-    <button class="nav-btn" onclick="scrollToSection('newsletter')">Newsletter</button>
+    <a class="nav-btn" href="index.html">Home</a>
+    <a class="nav-btn" href="about.html">About Us</a>
+    <a class="nav-btn" href="releases.html">Releases</a>
+    <a class="nav-btn" href="youtube.html">YouTube</a>
+    <a class="nav-btn" href="faq.html">FAQ</a>
+    <a class="nav-btn" href="newsletter.html">Newsletter</a>
+    <a class="nav-btn" href="contact.html">Contact</a>
+    <a class="nav-btn" href="privacy.html">Privacy Policy</a>
   </nav>
 </header>
 
