--- a/index.html
+++ b/index.html
@@ -93,9 +93,18 @@
     <h1 class="logo">TribleTunes</h1>
   </div>
 
+  <!-- First row of nav -->
   <nav class="header-nav">
     <a class="nav-btn" href="index.html">Home</a>
     <a class="nav-btn" href="about.html">About Us</a>
+    <a class="nav-btn" href="releases.html">Releases</a>
+    <a class="nav-btn" href="youtube.html">YouTube</a>
+  </nav>
+
+  <!-- Second row of nav -->
+  <nav class="header-nav">
+    <a class="nav-btn" href="faq.html">FAQ</a>
+    <a class="nav-btn" href="newsletter.html">Newsletter</a>
     <a class="nav-btn" href="contact.html">Contact</a>
     <a class="nav-btn" href="privacy.html">Privacy Policy</a>
   </nav>
