--- a/index.html
+++ b/index.html
@@ -92,12 +92,12 @@
   <div class="header-logo">
     <h1 class="logo">TribleTunes</h1>
   </div>
-
+  
   <nav class="header-nav">
     <a class="nav-btn" href="index.html">Home</a>
-    <a class="nav-btn" href="about.html">About Us</a>
-    <a class="nav-btn" href="contact.html">Contact</a>
-    <a class="nav-btn" href="privacy.html">Privacy Policy</a>
+    <a class="nav-btn" href="about/">About Us</a>
+    <a class="nav-btn" href="contact/">Contact</a>
+    <a class="nav-btn" href="submission/">Submission</a>
   </nav>
 </header>
 <!-- ABOUT -->
