--- a/about/index.html
+++ b/about/index.html
@@ -5,31 +5,61 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About Us - TribleTunes</title>
   <link rel="stylesheet" href="../style.css">
+  <style>
+    main {
+      padding: 40px 20px;
+      max-width: 1000px;
+      margin: auto;
+      line-height: 1.7;
+    }
+
+    main h2 {
+      margin-bottom: 20px;
+      font-size: 2rem;
+    }
+
+    main h3 {
+      margin-top: 30px;
+      font-size: 1.5rem;
+    }
+
+    main ul {
+      margin-left: 20px;
+    }
+
+    main p {
+      margin-bottom: 20px;
+    }
+  </style>
 </head>
 <body>
 
+  <!-- Header (same as main page) -->
   <header>
     <div class="header-logo">
       <h1 class="logo">TribleTunes</h1>
     </div>
 
-    <!-- Navigation -->
     <nav class="header-nav">
       <a class="nav-btn" href="../index.html">Home</a>
       <a class="nav-btn" href="../about/">About Us</a>
       <a class="nav-btn" href="../releases/">Releases</a>
       <a class="nav-btn" href="../youtube/">YouTube</a>
+      <a class="nav-btn" href="../faq/">FAQ</a>
+      <a class="nav-btn" href="../newsletter/">Newsletter</a>
+      <a class="nav-btn" href="../contact/">Contact</a>
+      <a class="nav-btn" href="../privacy/">Privacy Policy</a>
+      <a class="nav-btn" href="../store/">Store</a>
     </nav>
   </header>
 
-  <main style="padding: 20px; max-width: 900px; margin: auto;">
+  <!-- Main content -->
+  <main>
     <h2>About TribleTunes</h2>
 
     <p>Welcome to <strong>TribleTunes</strong>! Our mission is to support emerging artists by giving them a platform to showcase their talent. We are building TribleTunes as a label for upcoming artists, helping them reach wider audiences and grow their music careers.</p>
 
     <p>We are also active on <strong>YouTube</strong>, creating high-quality <em>lyric videos</em> to help listeners connect with music on a deeper level. Our goal is to make music accessible, enjoyable, and shareable for everyone.</p>
-
-    <p>TribleTunes is dedicated to quality, consistency, and creativity. By combining our label services with our YouTube presence, we aim to empower artists and connect them with fans worldwide. Whether you are a listener or an aspiring musician, TribleTunes is here to help you experience music like never before.</p>
 
     <h3>Our Vision</h3>
     <ul>
@@ -43,6 +73,7 @@
     <p>If you are an artist looking to grow your reach or a fan who loves discovering new music, TribleTunes welcomes you! Follow us on YouTube and stay connected to be part of our growing music community.</p>
   </main>
 
+  <!-- Footer (same simple footer) -->
   <footer style="text-align:center; padding:20px; margin-top:40px;">
     <a href="../index.html">Home</a> | 
     <a href="../about/">About Us</a>
