--- a/about/index.html
+++ b/about/index.html
@@ -63,13 +63,12 @@
   </div>
   
   <nav class="header-nav">
-    <a class="nav-btn" href="../index.html">Home</a>
-    <a class="nav-btn" href="../about/">About Us</a>
-    <a class="nav-btn" href="../contact/">Contact</a>
-    <a class="nav-btn" href="../submission/">Submission</a>
+    <a class="nav-btn" href="/index.html">Home</a>
+    <a class="nav-btn" href="/about/">About Us</a>
+    <a class="nav-btn" href="/contact/">Contact</a>
+    <a class="nav-btn" href="/submission/">Submission</a>
   </nav>
 </header>
-
 <!-- ABOUT US CONTENT -->
 <section id="about">
   <h2 class="section-title">About TribleTunes</h2>
