--- a/contact/index.html
+++ b/contact/index.html
@@ -73,15 +73,14 @@
   <div class="header-logo">
     <h1 class="logo">TribleTunes</h1>
   </div>
-
+  
   <nav class="header-nav">
-    <a class="nav-btn" href="../index.html">Home</a>
-    <a class="nav-btn" href="../about/">About Us</a>
-    <a class="nav-btn" href="../contact/">Contact</a>
-    <a class="nav-btn" href="../submission/">Submission</a>
+    <a class="nav-btn" href="/index.html">Home</a>
+    <a class="nav-btn" href="/about/">About Us</a>
+    <a class="nav-btn" href="/contact/">Contact</a>
+    <a class="nav-btn" href="/submission/">Submission</a>
   </nav>
 </header>
-
 <!-- CONTACT SECTION -->
 <section id="contact">
   <h2 class="section-title">Get in Touch</h2>
