--- a/submission/index.html
+++ b/submission/index.html
@@ -83,15 +83,17 @@ footer a:hover{text-decoration:underline;}
 
 <!-- HEADER -->
 <header>
-  <div class="header-logo"><h1 class="logo">TribleTunes</h1></div>
+  <div class="header-logo">
+    <h1 class="logo">TribleTunes</h1>
+  </div>
+  
   <nav class="header-nav">
-    <a class="nav-btn" href="index.html">Home</a>
-    <a class="nav-btn" href="about/">About Us</a>
-    <a class="nav-btn" href="contact/">Contact</a>
-    <a class="nav-btn" href="submission/">Submission</a>
+    <a class="nav-btn" href="/index.html">Home</a>
+    <a class="nav-btn" href="/about/">About Us</a>
+    <a class="nav-btn" href="/contact/">Contact</a>
+    <a class="nav-btn" href="/submission/">Submission</a>
   </nav>
 </header>
-
 <!-- INTRO -->
 <section id="intro" class="visible">
   <h2 class="section-title">Submit Your Track</h2>
