--- a/index.html
+++ b/index.html
@@ -94,13 +94,13 @@
   </div>
   
   <nav class="header-nav">
-    <a class="nav-btn" href="index.html">Home</a>
-    <a class="nav-btn" href="about/">About Us</a>
-    <a class="nav-btn" href="contact/">Contact</a>
-    <a class="nav-btn" href="submission/">Submission</a>
+    <a class="nav-btn" href="/index.html">Home</a>
+    <a class="nav-btn" href="/about/">About Us</a>
+    <a class="nav-btn" href="/contact/">Contact</a>
+    <a class="nav-btn" href="/submission/">Submission</a>
   </nav>
 </header>
-<!-- ABOUT -->
+  <!-- ABOUT -->
 <section id="about">
   <h2 class="section-title">Lose yourself in</h2>
   <h3 class="section-subtitle">the Place of amazing music.</h3>
