--- a/contact/index.html
+++ b/contact/index.html
@@ -125,11 +125,14 @@
 <footer>
   <p>&copy; 2025 TribleTunes. All rights reserved.</p>
   <p>
+    <a href="https://tribletunes.com/">Home</a> |
+    <a href="https://tribletunes.com/about/">About Us</a> |
+    <a href="https://tribletunes.com/contact/">Contact</a> |
+    <a href="https://tribletunes.com/submission/">Submission</a> |
     <a href="https://www.youtube.com/@TribleTunes" target="_blank">YouTube</a> |
     <a href="https://open.spotify.com/artist/2cR2Yz2b6cdPNHbjTnNsVy" target="_blank">Spotify</a> |
     <a href="mailto:contact@tribletunes.com">Email</a>
   </p>
 </footer>
-
 </body>
 </html>
