--- a/submission/index.html
+++ b/submission/index.html
@@ -136,7 +136,6 @@ footer a:hover{text-decoration:underline;}
       <div class="input-icon-wrapper">
         <input type="url" name="tracklink" placeholder="Spotify / SoundCloud Track Link" required>
         <img src="https://upload.wikimedia.org/wikipedia/commons/1/19/Spotify_logo_without_text.svg" alt="Spotify">
-        <img src="https://ik.imagekit.io/h2tos5anh/soundcloud-svgrepo-com.svg" alt="SoundCloud" style="left:35px;">
       </div>
       <button type="submit">Submit Track</button>
     </form>
@@ -157,7 +156,7 @@ footer a:hover{text-decoration:underline;}
   </ul>
   <div class="paid-card">
     <a href="https://app.one-submit.com/direct-submit/27237/2377/5549/TribleTunes-youtube-Music-Promotion" target="_blank">
-      Submit for Paid Promotion & Wider Reach
+      Submit for Paid Promotion
     </a>
   </div>
 </section>
